添加修改用户身份以及订阅功能
